--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                       <h1>Feedback form</h1>
                         <p class="lead"><font color=#F16272>Enter your Email to recieve the Download Link</font></p> 
                 
-                      <form action="//formspree.io/your@email.com" method="POST">
+                      <form action="//formspree.io/shrobon.biswas@gmail.com" method="POST">
                           <div class="form-group">
                             <label for="fname"><font color=#F16272>Your name</font></label>
                             <input type="text" name="fname" class="form-control" placeholder="Your name " value=></input>
