--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
 
     
-<div class="" id="last">
+<div class="">
     <div class="container-fluid contentContainer" >
         
         <h1 class="text-center">Why should you download this app ??</h1>
@@ -117,7 +117,7 @@
 
 
 
-<div class="jumbotron">
+<div class="jumbotron" >
         <div class="container-fluid contentContainer" id="download">
             <div class="row">
               <h1 class="text-center">Download Travelista App</h1>
