--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                                     <label for="femail"><font color=#F16272>Your Email</font></label>
                                     <input type="email" name="_replyto" class="form-control" placeholder="Your Email " value=></input>
                                   
-                                    <input type="hidden" name="_next" value="//site.io/thanks.html"/>
+                                    <input type="hidden" name="_next" value="https://shrobon.github.io/"/>
 
                                   </div>
                                   <input type="submit" name="submit" class="btn btn-success btn-lg" value="Get Download Link"></input>
