--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
 
             <div class="col-md-4" class="text-center">
                 <h2 class="text-center">Enough Talking !! : Now Watch </h2>
-                <p  class="text-center"><iframe width="315" height="315" src="https://www.youtube.com/embed/vL7p-IsObj4" frameborder="0" allowfullscreen></iframe></p>
+                </br>
+                <p  class="text-left"><iframe width="340" height="300" src="https://www.youtube.com/embed/vL7p-IsObj4" frameborder="0" allowfullscreen></iframe></p>
             </div>
 
             <div class="col-md-1">
