--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       
             <div class="row">  
                 <div class="col-md-4">
-                  <p class="text-center"><img src="iphone1.png" class="phone"></img></p>
+                  <p class="text-center"><img src="iphon1.png" class="phone"></img></p>
                 </div> 
 
                 <div class="col-md-2">
