--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                             <h1 class="text-center">Watchlist Form</h1>
                             <p class="lead"><font color=#F16272>I bet you can't wait to download this awesome app !!</font></p> 
 
-                            <p><font color=#F16272>Enter your email address below and well will make sure that you are among the first ones to know when we are available to on AppStore and Google Playstore</font></p> 
+                            <p><font color=#F16272>Enter your email address below and we'll will make sure that you are among the first ones to know when we are available on AppStore and Google Playstore</font></p> 
                     
                               <form action="//formspree.io/shrobon.biswas@gmail.com" method="POST" class="text-center">
                                   <div class="form-group">
@@ -187,7 +187,7 @@
                                     <input type="hidden" name="_next" value="https://shrobon.github.io/thanks.html"/>
 
                                   </div>
-                                  <input type="submit" name="submit" class="btn btn-success btn-lg" value="Get Download Link"></input>
+                                  <input type="submit" name="submit" class="btn btn-success btn-lg" value="Subscribe"></input>
                               </form>
                             </div>
                           </div>
