--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
             </div>
 
             <div class="col-md-4" class="text-center">
-                <h2 class="text-center">CLICKCLOP DEMO TEASER</h2>
+                <h2 class="text-center">Help us Make it Happen</h2>
                 </br>
-                <p  class="text-left"><iframe width="340" height="300" src="https://www.youtube.com/embed/vL7p-IsObj4" frameborder="0" allowfullscreen></iframe></p>
+                <p  class="text-left"><script type="text/javascript" src="https://www.crowdfunder.co.uk/clickclop/widget.js/"></script></p>
             </div>
 
             <div class="col-md-1">
