Struggled with css of form mobile

--- a/index3.html
+++ b/index3.html
@@ -77,34 +77,30 @@
 
 
 <div class="jumbotron">
-    <div class="container-fluid contentContainer">
+    <div class="container-fluid contentContainer" >
 
         <h1 class="text-center">Why should you download this app ??</h1>
         <h2 class="text-center"><font color=#F16272>Beacuse CLICKCLOP is Awesome !!</font></h2>
         </br>
         </br>
-
         <div class="row">
-            <div class="col-md-2">
-            </div>
-            <div class="col-md-3">
+            <div class="col-md-6">
                 <h2 class="text-center">About CLICKCLOP</h2>
                 <h3><font color=#F16272></font></h3>
-                </br>
                 <p class="lead">We are trying to create a platform for equestrian people and pet owners to consolidate directories, calendars, and booking of lessons, care etc all in one place. This will also open up hundreds of opportunities for enthusiastic young people to work freelance who may otherwise be struggling to find work that they are passionate about by registering as grooms as well as boosting the business of freelance riders, instructors, farriers, pet sitters etc.</p>
 
             </div>
 
-            <div class="col-md-2">
+            <div class="col-md-1">
             </div>
 
-            <div class="col-md-3" class="text-center">
-                <h2 class="text-center">Support CLICKCLOP</h2>
+            <div class="col-md-4" class="text-center">
+                <h2 class="text-center">Help us Make it Happen</h2>
                 </br>
                 <p  class="text-left"><script type="text/javascript" src="https://www.crowdfunder.co.uk/clickclop/widget.js/"></script></p>
             </div>
 
-            <div class="col-md-2">
+            <div class="col-md-1">
             </div>
 
         </div>
@@ -118,7 +114,7 @@
 
 
 
-<div class="jumbotron" id="last" align="center">
+<div class="jumbotron" id="last">
         <div class="container-fluid contentContainer" >
             <div class="row">
               <h1 class="text-center">Download CLICKCLOP App</h1>
@@ -168,7 +164,7 @@
                      <div class="row text-center">
                         <div class="col-md-3">
                         </div>
-                        <div class="col-md-6 text-center" style="position: relative;">
+                        <div class="col-md-6" style="position: relative;">
                             <h1 class="text-center">Watchlist Form</h1>
                             <p class="lead"><font color=#F16272>I bet you can't wait to download this awesome app !!</font></p>
 
@@ -176,10 +172,11 @@
 
 
 
-                              <img src="iphone5.png" class="text-center"></img>
-                              <form action="//formspree.io/shrobon.biswas@gmail.com" method="POST" class="centered" style="position: absolute;" align="center">
+                              <img src="iphone5.png" class="phone"></img>
+                              <form action="//formspree.io/shrobon.biswas@gmail.com" method="POST" class="text-center" style="position: absolute; bottom: 110px; left: 200px; width: 310px;">
 
-                              
+                              <!-- Editted from here -->
+                              <div class="" style="position: relative">
                                   <div class="form-group">
                                     <label for="fname"><font color=#F16272>Enter your name</font></label>
                                     <input type="text" name="name" class="form-control " placeholder="Your name " value=></input>
@@ -192,13 +189,21 @@
                                     <input type="hidden" name="_next" value="https://shrobon.github.io/thanks.html"/>
 
                                   </div>
-                                  <input type="submit" name="submit" class="btn btn-success btn-lg" value="Subscribe" ></input>
+                                  <input type="submit" name="submit" class="btn btn-success btn-lg" value="Subscribe"></input>
+
+
+                                <!-- Editted from here -->
+                                </div>
+
 
                               </form>
                             </div>
                           </div>
                           <div class="row-md-3">
                           </div>
+
+
+
 
 
 
