--- a/index4.html
+++ b/index4.html
@@ -142,19 +142,19 @@
                         <div class="row">
                             <div class="row-md-4">
                               <h2>Offer 1</h2>
-                              <p><font >Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </font></p>
+                              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
                               <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
                             </div>
 
                             <div class="row-md-4">
                               <h2>Offer 2</h2>
-                              <p><font >Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</font> </p>
+                              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
                               <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
                            </div>
 
                             <div class="row-md-4">
                               <h2>Offer 3</h2>
-                              <p><font >Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum.</font></p>
+                              <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum.</p>
                               <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
                             </div>
 
