--- a/index.html
+++ b/index.html
@@ -76,18 +76,18 @@
 
 
 
-<div class="jumbotron">
-    <div class="container-fluid contentContainer">
+<div class="jumbotron" id="first" align="center">
+    <div class="container-fluid contentContainer" >
 
         <h1 class="text-center">Why should you download this app ??</h1>
-        <h2 class="text-center"><font color=#F16272>Beacuse CLICKCLOP is Awesome !!</font></h2>
+        <h2 class="text-center"><font color=#F16272></font></h2>
         </br>
         </br>
 
         <div class="row">
-            <div class="col-md-2">
+            <div class="col-md-4">
             </div>
-            <div class="col-md-3">
+            <div class="col-md-4">
                 <h2 class="text-center">About CLICKCLOP</h2>
                 <h3><font color=#F16272></font></h3>
                 </br>
@@ -95,9 +95,9 @@
 
             </div>
 
-            <div class="col-md-2">
+            <div class="col-md-4">
             </div>
-
+            <!--
             <div class="col-md-3" class="text-center">
                 <h2 class="text-center">Support CLICKCLOP</h2>
                 </br>
@@ -106,6 +106,7 @@
 
             <div class="col-md-2">
             </div>
+            -->
 
         </div>
 
@@ -170,9 +171,9 @@
                         </div>
                         <div class="col-md-6 text-center" style="position: relative;">
                             <h1 class="text-center">Watchlist Form</h1>
-                            <p class="lead"><font color=#F16272>I bet you can't wait to download this awesome app !!</font></p>
+                            <p class="lead"><font>I bet you can't wait to download this awesome app !!</font></p>
 
-                            <p><font color=#F16272>Enter your email address below and we'll will make sure that you are among the first ones to know when we are available on AppStore and Google Playstore</font></p>
+                            <p><font>Enter your email address below and we'll will make sure that you are among the first ones to know when we are available on AppStore and Google Playstore</font></p>
 
 
 
